# xx0wq.video.importer

./: .gitignore  CMakeLists.txt  ColorMapper.txt  EditorIntegration.hpp  Export.hpp  Utils.cpp  VideoDecoder.cpp  VideoDecoder.hpp  VideoImportPanel.cpp  VideoImporter.cpp  mod.json
.geode/: config.json
.github/workflows/: cmake-multi-platform.yml  cmakedownload-multi-platform.yml  cmakesimple-multi-platform.yml
resources/: about.md
setup/include/Geode/: GameObject.hpp  GeneratedBinding.hpp  Result.hpp
setup/include/Geode/c++stl/: aliastl.hpp  string.hpp
setup/include/Geode/cocos2d/: cocos2d.hpp
setup/include/Geode/platform/: useless.txt
setup/include/Geode/utils/: matjson.hpp
src/: ColorMapper.cpp  ColorMapper.hpp  EditorInjection.cpp  EditorInjection.hpp  EditorIntegration.cpp  EditorIntegration.hpp  Export.hpp  ImageImporter.cpp  Utils.cpp  Utils.hpp  VideoDecoder.cpp  VideoDecoder.hpp  VideoImportPanel.hpp  VideoImporter.cpp  VideoImporter.hpp  main.cpp
